Refactor: 예약 목록 조회 상점을 필터로 사용할 수 있게 변경 (#65)
* Refactor: getReservations 구조 변경

* Fix: getReservations 사장 ID를 못받아오던 문제 해결

* Test: gerReservations 테스트

* Feat: 예약 스케줄러 구현

* Feat: 예약 스케줄러 테스트

* Feat: ReservationStatus를 응답에 추가

* Fix: Validated 제거

* Fix: 예약 정보가 없을 경우 빈 리스트를 반환하도록 변경

* Fix: Swagger 문서 description 변경

* Chore: 미구현 스케줄러 주석처리